--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-easy-crop": "^5.0.5",
     "react-icons": "^5.0.1",
     "react-image-crop": "^11.0.5",
+    "react-player": "^2.15.1",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.0"
   },
