--- a/package.json
+++ b/package.json
@@ -21,8 +21,11 @@
     "react-icons": "^5.0.1",
     "react-image-crop": "^11.0.5",
     "react-player": "^2.15.1",
-    "react-redux": "^9.1.0",
-    "react-router-dom": "^6.22.0"
+    "react-redux": "^9.1.2",
+    "react-router-dom": "^6.22.0",
+    "redux": "^5.0.1",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-thunk": "^3.1.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.55",
