--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "pdf-lib": "^1.17.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.1",
+    "react-calendar": "^5.0.0",
     "react-dom": "^18.2.0",
     "react-easy-crop": "^5.0.5",
     "react-icons": "^5.0.1",
